[package]
name = "rustpython-bytecode"
description = "RustPython specific bytecode."
version = "0.1.2"
authors = ["RustPython Team"]
edition = "2021"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"


[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
lz4_flex = "0.9.2"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-complex = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
itertools = "0.10.3"
bstr = "0.2.17"
static_assertions = "1.1.0"
