[package]
name = "rustpython-parser-core"
description = "RustPython parser data types."
version = "0.2.0"
authors = ["RustPython Team"]
edition = "2021"
repository = "https://github.com/RustPython/Parser/"
license = "MIT"

[dependencies]
# ruff dependency shouldn't be placed out of this crate
ruff_text_size = { path = "../ruff_text_size" }

serde = { version = "1.0.133", optional = true, default-features = false, features = ["derive"] }
is-macro.workspace = true

[features]
default = []
