[project]
name = "ruff-docs"
version = "0.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
  "PyYAML==6.0.1",
  "mkdocs==1.5.0",
  "mdformat==0.7.17",
  "mdformat-mkdocs==2.0.4",
  "mdformat-admon==2.0.2"
]

[tool.uv]
dev-dependencies = [
  "mkdocs-material==9.1.18",
  "mkdocs-redirects==1.2.1",
]
