[project]
name = "ruff-docs"
version = "0.0.0"
dependencies = [
  "PyYAML>=6.0.1",
  "mkdocs>=1.5.0",
  "mdformat>=0.7.17",
  "mdformat-mkdocs>=2.0.4",
  "mdformat-admon>=2.0.2",
  "mkdocs-material>=9.1.18",
  "mkdocs-redirects>=1.2.1",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruff_docs"]
