[package]
name = "rustpython-format"
edition = "2021"
version = "0.2.0"
description = "Format helpers for RustPython"
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/Parser/"
license = "MIT"

[dependencies]
rustpython-literal = { workspace = true }

bitflags = "2.3.1"
itertools = "0.10.5"
num-traits = { workspace = true }
num-bigint = { workspace = true }

[features]
