[package]
name = "rustpython-parser"
version = "0.2.0"
description = "Parser for python code."
authors = ["RustPython Team"]
build = "build.rs"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2021"

[features]
default = ["lalrpop"]  # removing this causes potential build failure

[build-dependencies]
anyhow = { workspace = true }
lalrpop = { version = "0.19.8", optional = true }
phf_codegen = "0.11.1"
tiny-keccak = { version = "2", features = ["sha3"] }

[dependencies]
rustpython-ast = { path = "../ast", version = "0.2.0" }
rustpython-compiler-core = { path = "../core", version = "0.2.0" }

ahash = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
unicode_names2 = { workspace = true }

unic-emoji-char = "0.9.0"
unic-ucd-ident  = "0.9.0"
lalrpop-util = "0.19.8"
phf = "0.11.1"
rustc-hash = "1.1.0"

[dev-dependencies]
insta = { workspace = true }
