# NOTE: RUSTPYTHON
# This crate is not a real crate of ruff, but cut off a part of `ruff_python_ast` and vendored it to avoid cross dependency

[package]
name = "ruff_source_location"
version = "0.0.0"
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]

[dependencies]
ruff_text_size = { path = "../ruff_text_size" }

memchr = { workspace = true }
once_cell = { workspace = true }
