[project]
name = "scripts"
version = "0.0.1"
dependencies = ["stdlibs", "tqdm", "mdformat", "pyyaml", "mypy-primer"]
requires-python = ">=3.12"

[tool.black]
line-length = 88

[tool.ruff]
extend = "../pyproject.toml"

[tool.ty.src]
# `ty_benchmark` is a standalone project with its own pyproject.toml files, search paths, etc.
exclude = ["./ty_benchmark"]

[tool.uv.sources]
mypy-primer = { git = "https://github.com/hauntsaninja/mypy_primer" }

[tool.ty.rules]
possibly-unresolved-reference = "error"
division-by-zero = "error"
unused-ignore-comment = "error"
