[package]
name = "char_str"
version = "0.0.4"
description = "A compact, immutable string type"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["string", "sso", "cow"]
categories = ["data-structures"]

[lib]
test = false

[features]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(loom)'.dependencies]
loom = { workspace = true, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
